Improvements removed unneeded/unused methods